--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,15 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependency folders
 node_modules
+
+# Build output
 dist
 dist-ssr
+
+# Local env files
+.env
 *.local
 
 # Editor directories and files
@@ -22,4 +28,3 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-*.env
