--- a/.github/workflows/full-deploy.yml
+++ b/.github/workflows/full-deploy.yml
@@ -16,25 +16,26 @@ jobs:
     runs-on: ubuntu-latest
     needs: checkout
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '18'
 
       - name: Install backend dependencies
-        run: |
-          cd server
-          npm install
+        working-directory: ./server
+        run: npm install
 
       - name: Install frontend dependencies
-        run: |
-          cd client
-          npm install
+        working-directory: ./client
+        run: npm install
 
       - name: Build frontend
-        run: |
-          cd client
-          npm run build
+        working-directory: ./client
+        run: npm run build
+
 
   lint:
     runs-on: ubuntu-latest
@@ -101,7 +102,7 @@ jobs:
       - name: Deploy backend stack with CloudFormation
         run: |
           aws cloudformation deploy \
-            --template-file server/cf/ecs.yml \
+            --template-file CloudFormation/ecs.yml \
             --stack-name bookreview-backend-stack \
             --capabilities CAPABILITY_NAMED_IAM \
             --parameter-overrides \
