--- a/.github/workflows/full-deploy.yml
+++ b/.github/workflows/full-deploy.yml
@@ -104,29 +104,37 @@ jobs:
     outputs:
       alb-url: ${{ steps.get-alb.outputs.alb-url }}
     steps:
-      - uses: actions/checkout@v4
+    - uses: actions/checkout@v4
 
-      - name: Deploy backend stack with CloudFormation
-        run: |
-          aws cloudformation deploy \
-            --template-file CloudFormation/ecs.yml \
-            --stack-name bookreview-backend-stack \
-            --capabilities CAPABILITY_NAMED_IAM \
-            --parameter-overrides \
-              VpcId=${{ secrets.VPC_ID }} \
-              SubnetIds=${{ secrets.SUBNET_IDS }} \
-              EcrImageUrl=${{ secrets.ECR_IMAGE_URI }}:latest \
-              MongoUri=${{ secrets.MONGO_URI }} \
-              JwtSecret=${{ secrets.JWT_SECRET }}
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v2
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: us-east-1
 
-      - name: Get ALB DNS from stack output
-        id: get-alb
-        run: |
-          ALB_URL=$(aws cloudformation describe-stacks \
-            --stack-name bookreview-backend-stack \
-            --query "Stacks[0].Outputs[?OutputKey=='BackendLoadBalancerDNS'].OutputValue" \
-            --output text)
-          echo "alb-url=http://$ALB_URL" >> "$GITHUB_OUTPUT"
+    - name: Deploy backend stack with CloudFormation
+      run: |
+        aws cloudformation deploy \
+          --template-file server/cf/ecs.yml \
+          --stack-name bookreview-backend-stack \
+          --capabilities CAPABILITY_NAMED_IAM \
+          --parameter-overrides \
+            VpcId=${{ secrets.VPC_ID }} \
+            SubnetIds=${{ secrets.SUBNET_IDS }} \
+            EcrImageUrl=${{ secrets.ECR_IMAGE_URI }}:latest \
+            MongoUri=${{ secrets.MONGO_URI }} \
+            JwtSecret=${{ secrets.JWT_SECRET }}
+
+    - name: Get ALB DNS from stack output
+      id: get-alb
+      run: |
+        ALB_URL=$(aws cloudformation describe-stacks \
+          --stack-name bookreview-backend-stack \
+          --query "Stacks[0].Outputs[?OutputKey=='BackendLoadBalancerDNS'].OutputValue" \
+          --output text)
+        echo "alb-url=http://$ALB_URL" >> "$GITHUB_OUTPUT"
+
 
   deploy-frontend:
     runs-on: ubuntu-latest
