--- a/.github/workflows/full-deploy.yml
+++ b/.github/workflows/full-deploy.yml
@@ -123,8 +123,9 @@ jobs:
             VpcId=${{ secrets.VPC_ID }} \
             SubnetIds=${{ secrets.SUBNET_IDS }} \
             EcrImageUrl=${{ secrets.ECR_IMAGE_URI }}:latest \
-            MongoUri=${{ secrets.MONGO_URI }} \
-            JwtSecret=${{ secrets.JWT_SECRET }}
+            MongoUri='${{ secrets.MONGO_URI }}' \
+            JwtSecret='${{ secrets.JWT_SECRET }}'
+
  
     - name: Get ALB DNS from stack output
       id: get-alb
